cmake_minimum_required(VERSION 3.24)
project(Practica_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Practica_2 main.cpp Ruta.h Ruta.cpp UTM.h UTM.cpp VuelaFlight.h VuelaFlight.cpp Aeropuerto.h Aeropuerto.cpp Aerolinea.h Aerolinea.cpp Vuelo.h Vuelo.cpp fecha.cpp THashAeropuerto.h THashAeropuerto.cpp VuelaFilghtDoble1.h VuelaFlightDoble1.cpp VuelaFlightDoble2.h VuelaFlightDoble2.cpp)